set(MOAICORE_DIR ${SRC_DIR}/moaicore)

set(MOAICORE_SRCS
	${MOAICORE_DIR}/MOAIAction.cpp
	${MOAICORE_DIR}/MOAIActionMgr.cpp
	${MOAICORE_DIR}/MOAIAnim.cpp
	${MOAICORE_DIR}/MOAIAnimCurve.cpp
	${MOAICORE_DIR}/MOAIAnimCurveBase.cpp
	${MOAICORE_DIR}/MOAIAnimCurveQuat.cpp
	${MOAICORE_DIR}/MOAIAnimCurveVec.cpp
	${MOAICORE_DIR}/MOAIBitmapFontReader.cpp
	${MOAICORE_DIR}/MOAIBlendMode.cpp
	${MOAICORE_DIR}/MOAIBlocker.cpp
	${MOAICORE_DIR}/MOAIBoundsDeck.cpp
	${MOAICORE_DIR}/MOAIBox2DArbiter.cpp
	${MOAICORE_DIR}/MOAIBox2DBody.cpp
	${MOAICORE_DIR}/MOAIBox2DDebugDraw.cpp
	${MOAICORE_DIR}/MOAIBox2DDistanceJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DFixture.cpp
	${MOAICORE_DIR}/MOAIBox2DFrictionJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DGearJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DMouseJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DPrismaticJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DPulleyJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DRevoluteJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DRopeJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DWeldJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DWheelJoint.cpp
	${MOAICORE_DIR}/MOAIBox2DWorld.cpp
	${MOAICORE_DIR}/MOAIButtonSensor.cpp
	${MOAICORE_DIR}/MOAICamera.cpp
	${MOAICORE_DIR}/MOAICamera2D.cpp
	${MOAICORE_DIR}/MOAICameraAnchor2D.cpp
	${MOAICORE_DIR}/MOAICameraFitter2D.cpp
	${MOAICORE_DIR}/MOAICanary.cpp
	${MOAICORE_DIR}/MOAICollisionShape.cpp
	${MOAICORE_DIR}/MOAIColor.cpp
	${MOAICORE_DIR}/MOAICompassSensor.cpp
	${MOAICORE_DIR}/MOAICoroutine.cpp
	${MOAICORE_DIR}/MOAICp.cpp
	${MOAICORE_DIR}/MOAICpArbiter.cpp
	${MOAICORE_DIR}/MOAICpBody.cpp
	${MOAICORE_DIR}/MOAICpConstraint.cpp
	${MOAICORE_DIR}/MOAICpDebugDraw.cpp
	${MOAICORE_DIR}/MOAICpShape.cpp
	${MOAICORE_DIR}/MOAICpSpace.cpp
	${MOAICORE_DIR}/MOAIDataBuffer.cpp
	${MOAICORE_DIR}/MOAIDataBufferStream.cpp
	${MOAICORE_DIR}/MOAIDataIOAction.cpp
	${MOAICORE_DIR}/MOAIDebugLines.cpp
	${MOAICORE_DIR}/MOAIDeck.cpp
	${MOAICORE_DIR}/MOAIDeckRemapper.cpp
	${MOAICORE_DIR}/MOAIDeserializer.cpp
	${MOAICORE_DIR}/MOAIDraw.cpp
	${MOAICORE_DIR}/MOAIEaseDriver.cpp
	${MOAICORE_DIR}/MOAIEaseType.cpp
	${MOAICORE_DIR}/MOAIEnvironment.cpp
	${MOAICORE_DIR}/MOAIEventSource.cpp
	${MOAICORE_DIR}/MOAIFileStream.cpp
	${MOAICORE_DIR}/MOAIFileSystem.cpp
	${MOAICORE_DIR}/MOAIFont.cpp
	${MOAICORE_DIR}/MOAIFontReader.cpp
	${MOAICORE_DIR}/MOAIFont_bmfont.cpp
	${MOAICORE_DIR}/MOAIFoo.cpp
	${MOAICORE_DIR}/MOAIFooMgr.cpp
	${MOAICORE_DIR}/MOAIFrameBuffer.cpp
	${MOAICORE_DIR}/MOAIFreeTypeFontReader.cpp
	${MOAICORE_DIR}/MOAIGfxDevice.cpp
	${MOAICORE_DIR}/MOAIGfxQuad2D.cpp
	${MOAICORE_DIR}/MOAIGfxQuadDeck2D.cpp
	${MOAICORE_DIR}/MOAIGfxQuadListDeck2D.cpp
	${MOAICORE_DIR}/MOAIGfxResource.cpp
	${MOAICORE_DIR}/MOAIGlobals.cpp
	${MOAICORE_DIR}/MOAIGlyph.cpp
	${MOAICORE_DIR}/MOAIGlyphCache.cpp
	${MOAICORE_DIR}/MOAIGlyphCacheBase.cpp
	${MOAICORE_DIR}/MOAIGlyphCachePage.cpp
	${MOAICORE_DIR}/MOAIGlyphSet.cpp
	${MOAICORE_DIR}/MOAIGrid.cpp
	${MOAICORE_DIR}/MOAIGridDeck2D.cpp
	${MOAICORE_DIR}/MOAIGridPathGraph.cpp
	${MOAICORE_DIR}/MOAIGridSpace.cpp
	${MOAICORE_DIR}/MOAIHttpTaskBase.cpp
	${MOAICORE_DIR}/MOAIHttpTaskCurl.cpp
	${MOAICORE_DIR}/MOAIHttpTaskNaCl.cpp
	${MOAICORE_DIR}/MOAIImage-jpg.cpp
	${MOAICORE_DIR}/MOAIImage-png.cpp
	${MOAICORE_DIR}/MOAIImage.cpp
	${MOAICORE_DIR}/MOAIImageTexture.cpp
	${MOAICORE_DIR}/MOAIIndexBuffer.cpp
	${MOAICORE_DIR}/MOAIInputDevice.cpp
	${MOAICORE_DIR}/MOAIInputMgr.cpp
	${MOAICORE_DIR}/MOAIJoystickSensor.cpp
	${MOAICORE_DIR}/MOAIJsonParser.cpp
	${MOAICORE_DIR}/MOAIKeyboardSensor.cpp
	${MOAICORE_DIR}/MOAILayer.cpp
	${MOAICORE_DIR}/MOAILayer2D.cpp
	${MOAICORE_DIR}/MOAILayerBridge.cpp
	${MOAICORE_DIR}/MOAILayoutFrame.cpp
	${MOAICORE_DIR}/MOAILocationSensor.cpp
	${MOAICORE_DIR}/MOAILogMessages.cpp
	${MOAICORE_DIR}/MOAILogMgr.cpp
	${MOAICORE_DIR}/MOAILuaObject.cpp
	${MOAICORE_DIR}/MOAILuaRef.cpp
	${MOAICORE_DIR}/MOAILuaRuntime.cpp
	${MOAICORE_DIR}/MOAILuaState.cpp
	${MOAICORE_DIR}/MOAILuaStateHandle.cpp
	${MOAICORE_DIR}/MOAIMemStream.cpp
	${MOAICORE_DIR}/MOAIMesh.cpp
	${MOAICORE_DIR}/MOAIMotionSensor.cpp
	${MOAICORE_DIR}/MOAIMultiTexture.cpp
	${MOAICORE_DIR}/MOAINode.cpp
	${MOAICORE_DIR}/MOAINodeMgr.cpp
	${MOAICORE_DIR}/MOAIObject.cpp
	${MOAICORE_DIR}/MOAIParser.cpp
	${MOAICORE_DIR}/MOAIParticleCallbackPlugin.cpp
	${MOAICORE_DIR}/MOAIParticleDistanceEmitter.cpp
	${MOAICORE_DIR}/MOAIParticleEmitter.cpp
	${MOAICORE_DIR}/MOAIParticleForce.cpp
	${MOAICORE_DIR}/MOAIParticlePexPlugin.cpp
	${MOAICORE_DIR}/MOAIParticlePlugin.cpp
	${MOAICORE_DIR}/MOAIParticleScript.cpp
	${MOAICORE_DIR}/MOAIParticleState.cpp
	${MOAICORE_DIR}/MOAIParticleSystem.cpp
	${MOAICORE_DIR}/MOAIParticleTimedEmitter.cpp
	${MOAICORE_DIR}/MOAIPartition.cpp
	${MOAICORE_DIR}/MOAIPartitionCell.cpp
	${MOAICORE_DIR}/MOAIPartitionLevel.cpp
	${MOAICORE_DIR}/MOAIPartitionResultBuffer.cpp
	${MOAICORE_DIR}/MOAIPartitionResultMgr.cpp
	${MOAICORE_DIR}/MOAIPathFinder.cpp
	${MOAICORE_DIR}/MOAIPathGraph.cpp
	${MOAICORE_DIR}/MOAIPathTerrainDeck.cpp
	${MOAICORE_DIR}/MOAIPointerSensor.cpp
	${MOAICORE_DIR}/MOAIProp.cpp
	${MOAICORE_DIR}/MOAIProp2D.cpp
	${MOAICORE_DIR}/MOAIQuadBrush.cpp
	${MOAICORE_DIR}/MOAIRenderMgr.cpp
	${MOAICORE_DIR}/MOAIRenderable.cpp
	${MOAICORE_DIR}/MOAIRtti.cpp
	${MOAICORE_DIR}/MOAIScissorRect.cpp
	${MOAICORE_DIR}/MOAIScriptDeck.cpp
	${MOAICORE_DIR}/MOAIScriptNode.cpp
	${MOAICORE_DIR}/MOAISensor.cpp
	${MOAICORE_DIR}/MOAISerializer.cpp
	${MOAICORE_DIR}/MOAISerializerBase.cpp
	${MOAICORE_DIR}/MOAIShader.cpp
	${MOAICORE_DIR}/MOAIShaderMgr.cpp
	${MOAICORE_DIR}/MOAISim.cpp
	${MOAICORE_DIR}/MOAIStaticGlyphCache.cpp
	${MOAICORE_DIR}/MOAIStream.cpp
	${MOAICORE_DIR}/MOAIStreamReader.cpp
	${MOAICORE_DIR}/MOAIStreamWriter.cpp
	${MOAICORE_DIR}/MOAIStretchPatch2D.cpp
	${MOAICORE_DIR}/MOAISurfaceDeck2D.cpp
	${MOAICORE_DIR}/MOAISurfaceSampler2D.cpp
	${MOAICORE_DIR}/MOAITextBox.cpp
	${MOAICORE_DIR}/MOAITextBundle.cpp
	${MOAICORE_DIR}/MOAITextDesigner.cpp
	${MOAICORE_DIR}/MOAITextStyle.cpp
	${MOAICORE_DIR}/MOAITextStyler.cpp
	${MOAICORE_DIR}/MOAITexture.cpp
	${MOAICORE_DIR}/MOAITextureBase.cpp
	${MOAICORE_DIR}/MOAITileDeck2D.cpp
	${MOAICORE_DIR}/MOAITileFlags.cpp
	${MOAICORE_DIR}/MOAITimer.cpp
	${MOAICORE_DIR}/MOAITouchSensor.cpp
	${MOAICORE_DIR}/MOAITransform.cpp
	${MOAICORE_DIR}/MOAITransform2D.cpp
	${MOAICORE_DIR}/MOAITransformBase.cpp
	${MOAICORE_DIR}/MOAIUrlMgrCurl.cpp
	${MOAICORE_DIR}/MOAIUrlMgrNaCl.cpp
	${MOAICORE_DIR}/MOAIVertexBuffer.cpp
	${MOAICORE_DIR}/MOAIVertexFormat.cpp
	${MOAICORE_DIR}/MOAIVertexFormatMgr.cpp
	${MOAICORE_DIR}/MOAIViewport.cpp
	${MOAICORE_DIR}/MOAIWheelSensor.cpp
	${MOAICORE_DIR}/MOAIXmlParser.cpp
	${MOAICORE_DIR}/moaicore-pch.cpp
	${MOAICORE_DIR}/moaicore.cpp
)

add_library(moaicore ${MOAICORE_SRCS})