set(MOAIUSLSCORE_DIR ${SRC_DIR}/uslscore)

include_directories(${OOID_DIR})

add_library(uslscore
	${MOAIUSLSCORE_DIR}/STLString.cpp
	${MOAIUSLSCORE_DIR}/USAdapterInfo_posix.cpp
	${MOAIUSLSCORE_DIR}/USAdapterInfo_win32.cpp
	${MOAIUSLSCORE_DIR}/USBase64Cipher.cpp
	${MOAIUSLSCORE_DIR}/USBox.cpp
	${MOAIUSLSCORE_DIR}/USByteStream.cpp
	${MOAIUSLSCORE_DIR}/USCgt.cpp
	${MOAIUSLSCORE_DIR}/USCipher.cpp
	${MOAIUSLSCORE_DIR}/USCipherStream.cpp
	${MOAIUSLSCORE_DIR}/USColor.cpp
	${MOAIUSLSCORE_DIR}/USCurve.cpp
	${MOAIUSLSCORE_DIR}/USData.cpp
	${MOAIUSLSCORE_DIR}/USDataIOTask.cpp
	${MOAIUSLSCORE_DIR}/USDeflater.cpp
	${MOAIUSLSCORE_DIR}/USDeviceTime_apple.cpp
	${MOAIUSLSCORE_DIR}/USDeviceTime_nacl.cpp
	${MOAIUSLSCORE_DIR}/USDeviceTime_posix.cpp
	${MOAIUSLSCORE_DIR}/USDeviceTime_win32.cpp
	${MOAIUSLSCORE_DIR}/USDirectoryItr.cpp
	${MOAIUSLSCORE_DIR}/USDistance.cpp
	${MOAIUSLSCORE_DIR}/USFileStream.cpp
	${MOAIUSLSCORE_DIR}/USFileSys.cpp
	${MOAIUSLSCORE_DIR}/USFilename.cpp
	${MOAIUSLSCORE_DIR}/USFrustum.cpp
	${MOAIUSLSCORE_DIR}/USHexDump.cpp
	${MOAIUSLSCORE_DIR}/USInflater.cpp
	${MOAIUSLSCORE_DIR}/USInterpolate.cpp
	${MOAIUSLSCORE_DIR}/USIntersect.cpp
	${MOAIUSLSCORE_DIR}/USLexStream.cpp
	${MOAIUSLSCORE_DIR}/USLog.cpp
	${MOAIUSLSCORE_DIR}/USMemStream.cpp
	${MOAIUSLSCORE_DIR}/USMercator.cpp
	${MOAIUSLSCORE_DIR}/USMutex.cpp
	${MOAIUSLSCORE_DIR}/USMutex_posix.cpp
	${MOAIUSLSCORE_DIR}/USMutex_win32.cpp
	${MOAIUSLSCORE_DIR}/USParser.cpp
	${MOAIUSLSCORE_DIR}/USPlane.cpp
	${MOAIUSLSCORE_DIR}/USPolar.cpp
	${MOAIUSLSCORE_DIR}/USPrism.cpp
	${MOAIUSLSCORE_DIR}/USQuad.cpp
	${MOAIUSLSCORE_DIR}/USQuadCoord.cpp
	${MOAIUSLSCORE_DIR}/USRhombus.cpp
	${MOAIUSLSCORE_DIR}/USStream.cpp
	${MOAIUSLSCORE_DIR}/USStreamFormatter.cpp
	${MOAIUSLSCORE_DIR}/USSurface2D.cpp
	${MOAIUSLSCORE_DIR}/USSyntaxNode.cpp
	${MOAIUSLSCORE_DIR}/USSyntaxScanner.cpp
	${MOAIUSLSCORE_DIR}/USTask.cpp
	${MOAIUSLSCORE_DIR}/USTaskThread.cpp
	${MOAIUSLSCORE_DIR}/USThread.cpp
	${MOAIUSLSCORE_DIR}/USThread_posix.cpp
	${MOAIUSLSCORE_DIR}/USThread_win32.cpp
	${MOAIUSLSCORE_DIR}/USTrig.cpp
	${MOAIUSLSCORE_DIR}/USTypedPtr.cpp
	${MOAIUSLSCORE_DIR}/USUnique_linux.cpp
	${MOAIUSLSCORE_DIR}/USUnique_win32.cpp
	${MOAIUSLSCORE_DIR}/USXmlReader.cpp
	${MOAIUSLSCORE_DIR}/USZip.cpp
	${MOAIUSLSCORE_DIR}/USZipFile.cpp
	${MOAIUSLSCORE_DIR}/uslscore-pch.cpp
)